@@ -1,6 +1,11 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  06 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/livecdfs-update.sh:
+  Commenting out the livecd-kernel code, since the Installer should be doing
+  everything necessary itself.
+
   14 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/livecdfs-update.sh:
   Fix up the pci.ids/usb.ids code to work with newer pciutils and future-proof
